update inference framework and readme

--- a/configs/flow_matching.yaml
+++ b/configs/flow_matching.yaml
@@ -11,7 +11,7 @@ model:
     time_embed_dim: 64
     class_embed_dim: 64
     num_classes: 10
-  # pretrained_ckpt: ./checkpoint-10000.pth.tar.gz
+  pretrained_ckpt: runs/run_0/checkpoint-400000.pth.tar.gz
 
 method:
   arch: conditional_flow_matching
@@ -22,9 +22,9 @@ train:
   learning_rate: 2e-4
   optimizer: Adam
   scheduler: StepLR
-  max_epoches: 2000
-  validation_step: 500
-  checkpoint_step: 50000
+  max_epoches: 3000
+  validation_step: 1000
+  checkpoint_step: 100000
   max_train_steps: 500000
   grad_clip: 1.0
 
